update-manager (1:0.59.9) feisty; urgency=low

  [Sebastian Heinlein]
  * Hide help button - the outdated documentation is confusing (LP#44944)
  [Michael Vogt]
  * Use .update-manager-core dir
  * Fix bug in writable check for /var/lib/update-manager (LP#95599)
  * Ensure that /var/lib/update-manager is available

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 26 Mar 2007 11:29:00 +0200

update-manager (1:0.59.8) feisty; urgency=low

  * DistUpgrade/DistUpgradeViewKDE.py:
    - fix crash in error dialog (LP#94229)
    - i18n KDE frontend
  * DistUpgrade/DistUpgradeCache.py:
    - mention xubuntu-desktop too (LP#94443)
  * DistUpgrade/DistUpgradeCache.py:
    - fix in the logfile handling in server mode
  * DistUpgrade/DistUpgrade.cfg:
    - fix KeyDependency for xubuntu detection
  * UpdateManager/UpdateManager.py:
    - do not crash if UnInhibit dbus signal can not be send 
      (LP#86572)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Sat, 24 Mar 2007 15:39:47 +0100

update-manager (1:0.59.7) feisty; urgency=low

  * NEWS: removed empty file (LP#92250)
  * DistUpgrade/DistUpgradeControler.py:
    - fix wording of the "use network" question
    - better apport integration
    - fix in the progress reporting where the report was off-by-one
  * DistUpgrade/DistUpgradeFetcherSelf.py:
    - fix run_options argument
  * UpdateManager/Core/MetaRelease.py:
    - fix race conditin in download thread (thanks to Matt
      Zimmerman for reporting the issue)
  * do-release-upgrade:
    - added option --frontend, --mode
  
 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 21 Mar 2007 10:04:45 +0100

update-manager (1:0.59.6) feisty; urgency=low

  * DistUpgrade/DistUpgradeView.py, DistUpgradeControler.py:
    - fixes in the apport integration

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 14 Mar 2007 18:22:06 +0100

update-manager (1:0.59.5) feisty; urgency=low

  * UpdateManager/fakegconf.py:
    - Fix missing {get,set}_string() in fakegconf