@@ -138,7 +138,7 @@ class DistUpgradeFetcherCore(object):
     def runDistUpgrader(self):
         #print "runing: %s" % script
         if os.getuid() != 0:
-            os.execv("/usr/bin/gksu",["gksu",self.script])
+            os.execv("/usr/bin/sudo",["sudo",self.script])
         else:
             os.execv(self.script,[self.script]+self.run_options)
 
