@@ -6,6 +6,9 @@ update-manager (1:0.59.9) feisty; urgency=low
   * Use .update-manager-core dir
   * Fix bug in writable check for /var/lib/update-manager (LP#95599)
   * Ensure that /var/lib/update-manager is available
+  * inhibit sleep when runing the release upgrader(LP#70058)
+  * make sure that we do not run with a interactive debconf frontend 
+    on server upgrade (for packages like quagga)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 26 Mar 2007 11:29:00 +0200
 
